--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "todo app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "yasiru",
   "license": "ISC",
