--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "todo",
+  "name": "todoapp",
   "version": "1.0.0",
   "description": "todo app",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "author": "yasiru",
@@ -13,5 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
